--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "author": "Nida Waheed",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.744.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
+    "nodemailer": "^6.10.0",
     "validator": "^13.12.0"
   }
 }
